# minimal-orpheus

./: README.md  main.py  pyproject.toml
src/llm/: llama.py  model.py  sampling.py
src/tts/: stream.py  tts.py
src/tts/csm/: generator.py  models.py
src/tts/orpheus/: __init__.py  audio_decoder.py  generator.py
src/tts/streamelements/: client.py  speakers.py
